# rust_api_part_3

./: Cargo.toml  README.md
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
