[package]
name = "api"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive  = "1.0.0"
serde_json = "1.0.0"

rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"]}
